# canonical-logos

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  svgo.config.mjs  vercel.json
.github/ISSUE_TEMPLATE/: config.yml  request-logo-update.yml  request-new-logo.yml  request-takedown.yml
.github/workflows/: rebuild.yml  release.yml
data/: manifest.json  provenance.json  unresolved.json
logos/: index.html
scripts/: 01_fetch.py  02_normalise.py  03_manifest.py  04_validate.py  05_scout.py  _registry.py
sources/: registry.yaml
tests/: test_pipeline.py  test_registry.py
