[project]
name = "canonical-logos"
version = "0.0.0"
description = "Maintained, versioned set of canonical sailing logos for Sail Scoring."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "pyyaml>=6",
  "requests>=2.32",
  "pillow>=10",
]

[dependency-groups]
dev = [
  "ruff>=0.7",
  "pytest>=8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
